Ajustes para nao bloquear a thread principal